ingress/cassandra-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: cassandra-ing
  namespace: default
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/ssl-redirect: "false" # HTTPS로의 강제 리다이렉션 방지
spec:
  rules:
  - host: 
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: cassandra
            port:
              number: 9042
